--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
           </ul>
         </div>
         <div>
-            <button class="header_btn">GIFT FINDER</button>
+          <button class="header_btn">GIFT FINDER</button>
         </div>
       </div>
     </header>
 
-    <div class="yellow">
+    <div class="gr-gr2">
       <div class="green-1">
         <div class="pink-1">
           <div class="text-1">
@@ -60,115 +60,116 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="mather">
-        <div class="Gift-box">
-          <p>Gift for all Ocassions</p>
-        </div>
-        <div class="Gift-box2">
-          <p>"Try our web app to find the best gifts for all ocassions"</p>
-        </div>
-
-        <div class="mather_block">
-          <div class="foto">
-            <div><img src="img/Media1.jpg" /></div>
-            <div class="birth"><p>Birthday</p></div>
-            <div class="see"><p>See more</p></div>
-          </div>
-          <div class="foto2">
-            <div><img src="img/Media2.jpg" /></div>
-            <div class="anniv"><p>Anniversary</p></div>
-            <div class="see2"><p>See more</p></div>
-          </div>
-          <div class="foto3">
-            <div><img src="img/Media3.jpg" /></div>
-            <div class="Valentin"><p>Valentine's Day</p></div>
-            <div class="see3"><p>See more</p></div>
-          </div>
-          <div class="foto4">
-            <div><img src="img/Media4.jpg" /></div>
-            <div class="cris"><p>Christmas</p></div>
-            <div class="see4"><p>See more</p></div>
-          </div>
-        </div>
+    <div class="mather">
+      <div class="Gift-box">
+        <p>Gift for all Ocassions</p>
+      </div>
+      <div class="Gift-box2">
+        <p>"Try our web app to find the best gifts for all ocassions"</p>
       </div>
 
-      <div class="orange">
-        <div class="orange-container">
-          <div class="oran-text">
-            <div class="ccc">
-              <p><b>Ready to get started</b></p>
-            </div>
-            <div class="ccc1"><p>Sing up or contact as</p></div>
-          </div>
-          <div class="push">
-            <button>FIND GIFT NOW</button>
-            <button>HOW IT WORKS</button>
-          </div>
+      <div class="mather_block">
+        <div class="foto">
+          <div><img src="img/Media1.jpg" /></div>
+          <div class="birth"><p>Birthday</p></div>
+          <div class="see"><p>See more</p></div>
         </div>
-      </div>
-
-      <div class="white-box">
-        <div class="best-try">
-          <h1>Our Best Blogs Ever</h1>
-
-          <p>
-            “Try our blog to find the best tips and tricks to select your gift”
-          </p>
+        <div class="foto2">
+          <div><img src="img/Media2.jpg" /></div>
+          <div class="anniv"><p>Anniversary</p></div>
+          <div class="see2"><p>See more</p></div>
         </div>
-        <div class="esan">
-          <div class="image-man-woman"><img src="img/Media5.jpg" /></div>
-          <div class="Mr-dj">
-            <p class="jo">Mr. John Doe</p>
-            <p class="wish">
-              The best way to wish <br />
-              your wife
-            </p>
-            <p class="re">Read More</p>
-          </div>
+        <div class="foto3">
+          <div><img src="img/Media3.jpg" /></div>
+          <div class="Valentin"><p>Valentine's Day</p></div>
+          <div class="see3"><p>See more</p></div>
         </div>
-      </div>
-
-      <div class="white1_2">
-        <div class="block-white">
-          <div class="Text-Art">
-            <h1>
-              <p>
-                Database to find the gifts for your <br />
-                girlfriend
-              </p>
-            </h1>
-          </div>
-          <div class="Lorem1">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore...
-            </p>
-          </div>
-          <div class="Rea">Read More</div>
-        </div>
-        <div class="block-white33">
-          <div class="Text-Art">
-            <h1>
-              <p>
-                How Artificial Intelligence read your mind <br />
-                to find the best gift
-              </p>
-            </h1>
-          </div>
-          <div class="Lorem2">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore...
-            </p>
-          </div>
-          <div class="Rea2">
-            Read More
-            <p></p>
-          </div>
+        <div class="foto4">
+          <div><img src="img/Media4.jpg" /></div>
+          <div class="cris"><p>Christmas</p></div>
+          <div class="see4"><p>See more</p></div>
         </div>
       </div>
     </div>
+
+    <div class="orange">
+      <div class="orange-container">
+        <div class="oran-text">
+          <div class="ccc">
+            <p><b>Ready to get started</b></p>
+          </div>
+          <div class="ccc1"><p>Sing up or contact as</p></div>
+        </div>
+        <div class="push">
+          <button>FIND GIFT NOW</button>
+          <button>HOW IT WORKS</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="white-box">
+      <div class="best-try">
+        <h1>Our Best Blogs Ever</h1>
+
+        <p>
+          “Try our blog to find the best tips and tricks to select your gift”
+        </p>
+      </div>
+      <div class="esan">
+        <div class="image-man-woman"><img src="img/Media5.jpg" /></div>
+        <div class="Mr-dj">
+          <p class="jo">Mr. John Doe</p>
+          <p class="wish">
+            The best way to wish <br />
+            your wife
+          </p>
+          <p class="re">Read More</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="white1_2">
+      <div class="block-white">
+        <div class="Text-Art">
+          <h1>
+            <p>
+              Database to find the gifts for your <br />
+              girlfriend
+            </p>
+          </h1>
+        </div>
+        <div class="Lorem1">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore...
+          </p>
+        </div>
+        <div class="Rea">Read More</div>
+      </div>
+      <div class="block-white33">
+        <div class="Text-Art">
+          <h1>
+            <p>
+              How Artificial Intelligence read your mind <br />
+              to find the best gift
+            </p>
+          </h1>
+        </div>
+        <div class="Lorem2">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore...
+          </p>
+        </div>
+        <div class="Rea2">
+          Read More
+          <p></p>
+        </div>
+      </div>
+    </div>
+
     <div class="Logo-Gen">
       <div class="img-last">
         <img src="img/Home.jpg" />
